--- a/wp-content/themes/core/components/blocks/gallery_grid/index.pcss
+++ b/wp-content/themes/core/components/blocks/gallery_grid/index.pcss
@@ -7,4 +7,5 @@
  *
  * ----------------------------------------------------------------------------- */
 
+@import "css/dialog.pcss";
 @import "css/gallery_grid.pcss";
