updating horizontal cards to inline style, and restructuring

--- a/wp-content/themes/core/components/card/css/card.pcss
+++ b/wp-content/themes/core/components/card/css/card.pcss
@@ -122,11 +122,11 @@
 
 /* -----------------------------------------------------------------------------
  *
- * Component: Card Horizontal
+ * CASE: Inline Style Card
  *
  * ----------------------------------------------------------------------------- */
 
-.c-card--style-horizontal {
+.c-card--style-inline {
 	display: flex;
 	flex-flow: row;
 	align-items: center;
