--- a/wp-content/themes/core/components/card/css/card.pcss
+++ b/wp-content/themes/core/components/card/css/card.pcss
@@ -46,6 +46,28 @@
 			}
 		}
 	}
+
+	/* CASE: Style: Inline */
+	&.c-card--style-inline {
+		display: flex;
+		flex-flow: row;
+		align-items: center;
+		margin-top: 0;
+		margin-bottom: 0;
+		padding: var(--spacer-20) 0;
+		border-bottom: 1px solid var(--color-grey-light);
+
+		/* Need to drop the font size down a bit on the tag for inline cards */
+		.t-tag {
+			font-size: 11px;
+		}
+
+		&:hover {
+			.c-card__title {
+				color: var(--color-link-hover);
+			}
+		}
+	}
 }
 
 /* -----------------------------------------------------------------------------
@@ -59,6 +81,23 @@
 	.c-card--style-elevated &,
 	.c-card--style-outlined & {
 		margin-top: calc(-1 * var(--spacer-30));
+	}
+
+	/* CASE: Style: Inline */
+	.c-card--style-inline & {
+		display: none;
+		flex-shrink: 0;
+
+		@media(--viewport-medium) {
+			display: block;
+			width: 152px;
+			margin-right: var(--spacer-30);
+			margin-bottom: 0;
+		}
+
+		@media(--viewport-large) {
+			width: 168px;
+		}
 	}
 }
 
@@ -96,7 +135,28 @@
  * Card Title
  * ----------------------------------------------------------------------------- */
 
-.c-card__title {}
+.c-card__title {
+
+	/* CASE: Style: Inline */
+	.c-card--style-inline & {
+		display: block;
+		text-decoration: none;
+
+		&:focus {
+			text-decoration: underline;
+		}
+	}
+}
+
+/* -----------------------------------------------------------------------------
+ * Card Date
+ * ----------------------------------------------------------------------------- */
+
+.c-card__date {
+	@mixin t-body-small;
+
+	color: var(--color-grey);
+}
 
 /* -----------------------------------------------------------------------------
  * Card Description
@@ -117,52 +177,5 @@
 	.c-card--style-elevated &,
 	.c-card--style-outlined & {
 		padding: 0 var(--spacer-30);
-	}
-}
-
-/* -----------------------------------------------------------------------------
- *
- * CASE: Inline Style Card
- *
- * ----------------------------------------------------------------------------- */
-
-.c-card--style-inline {
-	display: flex;
-	flex-flow: row;
-	align-items: center;
-
-	.c-card__title {
-		display: block;
-		text-decoration: none;
-
-		&:focus {
-			text-decoration: underline;
-		}
-	}
- 
-	.c-card__media {
-		display: none;
-		flex-shrink: 0;
-
-		@media(--viewport-medium) {
-			display: block;
-			width: 152px;
-			margin-right: var(--spacer-30);
-			margin-bottom: 0;
-		}
-
-		@media(--viewport-large) {
-			width: 168px;
-		}
-	}
-
-	.c-card__content {
-		margin: 0;
-	}
-
-	&:hover {
-		.c-card__title {
-			color: var(--color-link-hover);
-		}
 	}
 }
