a bit more css updates

--- a/wp-content/themes/core/components/blocks/content_loop/css/content_loop.pcss
+++ b/wp-content/themes/core/components/blocks/content_loop/css/content_loop.pcss
@@ -57,7 +57,7 @@
 
 /* -----------------------------------------------------------------------------
  *
- * Component: Content Loop Updates
+ * Component: Content Loop
  *
  * ----------------------------------------------------------------------------- */
 
@@ -65,80 +65,70 @@
     .c-card__description {
         margin-top: var(--spacer-30);
     }
-}
 
-/* -----------------------------------------------------------------------------
- *
- * Content Loop Columns
- *
- * ----------------------------------------------------------------------------- */
-
-.b-content-loop--layout_columns {
-    .c-card:nth-child(1),
-    .c-card:nth-child(2) {
-        border-top: 1px solid var(--color-grey-light);
-    }
-}
-
-/* -----------------------------------------------------------------------------
- *
- * CASE: Content Loop Feature
- *
- * ----------------------------------------------------------------------------- */
-
-.b-content-loop--layout_feature {
-    /* hide content block cta on this layout */
-    .c-content-block__cta {
-        display: none;
+    /* CASE: Columns */
+    &.b-content-loop--layout_columns {
+        .c-card:nth-child(1),
+        .c-card:nth-child(2) {
+            border-top: 1px solid var(--color-grey-light);
+        }
     }
 
-    .g-2-up {
-        @media (--viewport-medium) {
-            margin: 0 var(--grid-gutter-small-half-negative);
+    /* CASE: Feature */
+    &.b-content-loop--layout_feature {
+        /* hide content block cta on this layout */
+        .c-content-block__cta {
+            display: none;
         }
 
-        @media (--viewport-full) {
-            margin: 0 var(--grid-gutter-half-negative);
-        }
-
-        & > * {
+        .g-2-up {
             @media (--viewport-medium) {
-                width: 100%;
-                margin: 0 var(--grid-gutter-small-half);
+                margin: 0 var(--grid-gutter-small-half-negative);
             }
 
             @media (--viewport-full) {
-                width: calc(50% - var(--grid-gutter));
-                margin: 0 var(--grid-gutter-half);
+                margin: 0 var(--grid-gutter-half-negative);
+            }
+
+            & > * {
+                @media (--viewport-medium) {
+                    width: 100%;
+                    margin: 0 var(--grid-gutter-small-half);
+                }
+
+                @media (--viewport-full) {
+                    width: calc(50% - var(--grid-gutter));
+                    margin: 0 var(--grid-gutter-half);
+                }
             }
         }
-    }
-}
 
-.b-content-loop__secondary {
+        .b-content-loop__secondary {
 
-    .b-content-loop.b-content-loop--layout_feature & {
-        margin-top: var(--spacer-30);
+            .b-content-loop.b-content-loop--layout_feature & {
+                margin-top: var(--spacer-30);
 
-        @media (--viewport-full) {
-            margin-top: 0
+                @media (--viewport-full) {
+                    margin-top: 0
+                }
+            }
+
+            .c-card:first-child {
+                border-top: 1px solid var(--color-grey-light);
+            }
+
+            .c-block__cta-link {
+                margin-top: var(--spacer-20);
+            }
         }
-    }
 
-    .c-card:first-child {
-        border-top: 1px solid var(--color-grey-light);
-    }
+        .b-content-loop__secondary__cta {
+            margin-top: var(--spacer-10);
+            text-align: center;
 
-    .c-block__cta-link {
-        margin-top: var(--spacer-20);
-    }
-}
-
-.b-content-loop__secondary__cta {
-    margin-top: var(--spacer-10);
-    text-align: center;
-
-    @media (--viewport-full) {
-        text-align: left;
+            @media (--viewport-full) {
+                text-align: left;
+            }
+        }
     }
 }
