--- a/wp-content/themes/core/components/blocks/gallery_grid/css/dialog.pcss
+++ b/wp-content/themes/core/components/blocks/gallery_grid/css/dialog.pcss
@@ -8,7 +8,7 @@
 
     .swiper-wrapper {
         align-items: center;
-        padding: 20px 0;
+        padding: var(--spacer-30) 0;
     }
 
     .swiper-slide {
@@ -19,7 +19,7 @@
     .swiper-pagination-custom,
     .swiper-container-horizontal > .swiper-pagination-bullets {
         display: block;
-        margin-top: 10px;
+        margin-top: var(--spacer-10);
         position: static;
     }
 
@@ -29,9 +29,9 @@
     }
 
     .site-panel--gallery__col {
-        padding-bottom: 30px;
-        padding-left: 20px;
-        padding-right: 20px;
+        padding-bottom: var(--spacer-40);
+        padding-left: var(--spacer-30);
+        padding-right: var(--spacer-30);
     }
 
     .c-slider {
@@ -150,7 +150,7 @@
 
 .c-dialog__overlay-inner {
     height: calc(100% - 68px);
-    padding-top: 100px;
+    padding-top: var(--spacer-80);
     position: absolute;
     top: 68px;
     width: 100%;
@@ -166,7 +166,7 @@
     position: absolute;
     top: 0;
     left: 0;
-    padding: 20px;
+    padding: var(--spacer-30);
     width: 100%;
     height: 68px;
     background: #151515;
@@ -198,7 +198,7 @@
 
     @media (--viewport-full) {
         width: 80%;
-        padding: 0 20px;
+        padding: 0 var(--spacer-30);
     }
 }
 
@@ -258,7 +258,7 @@
 .b-gallery-grid__meta-count {
     width: 25%;
     text-align: right;
-    padding-right: 30px;
+    padding-right: var(--spacer-40);
 }
 
 .b-gallery-grid__meta-caption {
