some initial buildout of new dialog component

--- a/wp-content/themes/core/components/dialog/index.pcss
+++ b/wp-content/themes/core/components/dialog/index.pcss
@@ -1,10 +1,10 @@
 /* -----------------------------------------------------------------------------
  *
- * Component: Gallery Grid
+ * Component: Dialog
  *
  * This file is just a clearing-house, see the css directory
  * and edit the source files found there.
  *
  * ----------------------------------------------------------------------------- */
 
-@import "css/gallery_grid.pcss";
+@import "css/dialog.pcss";
