--- a/wp-content/themes/core/components/dialog/css/dialog.pcss
+++ b/wp-content/themes/core/components/dialog/css/dialog.pcss
@@ -28,12 +28,6 @@
         text-align: center;
     }
 
-    .site-panel--gallery__col {
-        padding-bottom: var(--spacer-40);
-        padding-left: var(--spacer-30);
-        padding-right: var(--spacer-30);
-    }
-
     .c-slider {
         margin: 0 auto;
         position: relative;
@@ -127,7 +121,7 @@
 }
 
 .c-dialog__overlay {
-    background-color: #151515;
+    background-color: var(--color-black);
     bottom: 0;
     color: var(--color-white);
     height: 100%;
@@ -169,7 +163,7 @@
     padding: var(--spacer-30);
     width: 100%;
     height: 68px;
-    background: #151515;
+    background: var(--color-black);
     z-index: 10;
     border-bottom: 1px solid var(--color-white);
 }
