moving dialog js setup

--- a/wp-content/themes/core/components/blocks/gallery_grid/css/gallery_grid.pcss
+++ b/wp-content/themes/core/components/blocks/gallery_grid/css/gallery_grid.pcss
@@ -1,3 +1,9 @@
+/* -----------------------------------------------------------------------------
+ *
+ * Component: Gallery Grid
+ *
+ * ----------------------------------------------------------------------------- */
+
 .b-gallery-grid__content {
     padding-top: var(--spacer-40);
 }
@@ -22,7 +28,7 @@
 
 /* -----------------------------------------------------------------------------
  *
- * Component: Gallery Grid
+ * Gallery Grid Layouts
  *
  * ----------------------------------------------------------------------------- */
 
