reorganizing some css to appropriate files

--- a/wp-content/themes/core/components/blocks/gallery_grid/css/gallery_grid.pcss
+++ b/wp-content/themes/core/components/blocks/gallery_grid/css/gallery_grid.pcss
@@ -91,4 +91,29 @@
 	}
 }
 
+/* -----------------------------------------------------------------------------
+ *
+ * Dialog Captions and Count
+ *
+ * ----------------------------------------------------------------------------- */
+
+.b-gallery-grid__meta-wrap {
+    display: flex;
+    flex-flow: row nowrap;
+    margin-top: var(--spacer-30);
+    padding: 0 var(--spacer-20);
+}
+
+.b-gallery-grid__meta-count {
+    width: 25%;
+    text-align: right;
+    padding-right: var(--spacer-40);
+}
+
+.b-gallery-grid__meta-caption {
+    flex: 1;
+    text-align: left;
+    max-width: 580px;
+}
+
 
