--- a/wp-content/themes/core/components/dialog/css/dialog.pcss
+++ b/wp-content/themes/core/components/dialog/css/dialog.pcss
@@ -24,7 +24,7 @@
     position: fixed;
     right: 0;
     top: 0;
-    width: calc(100% + 20px);
+    width: 100%;
     z-index: 20;
 
     .admin-bar & {
