adding some dialog variables. Adding a close action style

--- a/wp-content/themes/core/assets/css/src/theme/actions/actions.pcss
+++ b/wp-content/themes/core/assets/css/src/theme/actions/actions.pcss
@@ -102,3 +102,19 @@ a.a-cta,
 .t-sink a.a-cta {
 	@mixin a-cta-primary;
 }
+
+/* -----------------------------------------------------------------------------
+ *
+ * Call To Action: Close
+ *
+ * Notes:
+ * + General Close "X" button style
+ *
+ * Example:
+ * <button class="a-close">...</button>
+ *
+ * ----------------------------------------------------------------------------- */
+
+.a-close {
+	@mixin a-close;
+}
