--- a/wp-content/themes/core/components/dialog/css/dialog.pcss
+++ b/wp-content/themes/core/components/dialog/css/dialog.pcss
@@ -38,20 +38,6 @@
     }
 }
 
-.c-dialog__overlay-inner {
-    height: calc(100% - var(--dialog-header-height));
-    padding-top: var(--spacer-80);
-    position: absolute;
-    top: var(--dialog-header-height);
-    width: 100%;
-
-    @media (--viewport-wpadmin) {
-        align-items: center;
-        display: flex;
-        padding-top: 0;
-    }
-}
-
 /* -----------------------------------------------------------------------------
  *
  * Dialog Header
@@ -109,15 +95,13 @@
 
 .c-dialog__content-wrapper {
     position: relative;
-
-    @media (--viewport-medium) {
-        width: 100%;
-        height: 100%;
-        overflow: auto;
-    }
+    width: 100%;
+    height: 100%;
+    padding-top: var(--dialog-header-height);
+    overflow: auto;
 }
 
-.c-dialog__content-inner {
+.c-dialog__content {
     margin: 0 auto;
     padding: 0;
     max-width: 1000px;
