--- a/wp-content/themes/core/components/dialog/css/dialog.pcss
+++ b/wp-content/themes/core/components/dialog/css/dialog.pcss
@@ -28,6 +28,8 @@
     top: 0;
     width: 100%;
     z-index: 20;
+    display: flex;
+    flex-flow: column;
 
     .admin-bar & {
         top: var(--spacer-wpadmin-mobile);
@@ -45,14 +47,9 @@
  * ----------------------------------------------------------------------------- */
 
 .c-dialog__header {
-    position: absolute;
-    top: 0;
-    left: 0;
-    padding: var(--spacer-30);
+    padding: var(--spacer-30) var(--spacer-70);
     width: 100%;
-    height: var(--dialog-header-height);
     background: var(--color-black);
-    z-index: 10;
     border-bottom: 1px solid var(--color-white);
 }
 
@@ -66,7 +63,7 @@
     @mixin a-close;
 
     position: fixed;
-    right: 40px;
+    right: 10px;
     top: 13px;
     z-index: 21;
 
@@ -85,6 +82,10 @@
     &:focus {
 		outline: 1px dashed var(--color-white);
 	}
+
+    @media (--viewport-medium) {
+        right: 40px;
+    }
 }
 
 /* -----------------------------------------------------------------------------
@@ -97,7 +98,6 @@
     position: relative;
     width: 100%;
     height: 100%;
-    padding-top: var(--dialog-header-height);
     overflow: auto;
 }
 
