quick cleanup css nesting issues

--- a/wp-content/themes/core/components/card/css/card.pcss
+++ b/wp-content/themes/core/components/card/css/card.pcss
@@ -90,13 +90,9 @@
 
 		@media(--viewport-medium) {
 			display: block;
-			width: 152px;
+			width: var(--grid-2-col);
 			margin-right: var(--spacer-30);
 			margin-bottom: 0;
-		}
-
-		@media(--viewport-large) {
-			width: 168px;
 		}
 	}
 }
