fleshing out the icon grid

--- a/wp-content/themes/core/components/blocks/icon_grid/css/icon_grid.pcss
+++ b/wp-content/themes/core/components/blocks/icon_grid/css/icon_grid.pcss
@@ -4,4 +4,8 @@
  *
  * ----------------------------------------------------------------------------- */
 
+.b-icon-grid__header {
+    margin-bottom: var(--spacer-60);
+}
+
 
