--- a/wp-content/themes/core/components/card/css/card.pcss
+++ b/wp-content/themes/core/components/card/css/card.pcss
@@ -17,6 +17,11 @@
 		}
 	}
 
+	/* CASE: Centers all content within the card. */
+	&.is-centered-text {
+		text-align: center;
+	}
+
 	/* CASE: Style: Elevated */
 	&.c-card--style-elevated {
 		padding: var(--spacer-30) 0;
