--- a/wp-content/themes/core/assets/css/src/theme/layouts/grids.pcss
+++ b/wp-content/themes/core/assets/css/src/theme/layouts/grids.pcss
@@ -32,16 +32,16 @@
 
 	& > * {
 		width: 100%;
-		margin: 0 var(--grid-gutter-small-half);
+		margin: 0 var(--grid-gutter-small-half) var(--grid-gutter-small);
 
 		@media (--viewport-medium) {
 			width: calc(50% - var(--grid-gutter-medium));
-			margin: 0 var(--grid-gutter-medium-half);
+			margin: 0 var(--grid-gutter-medium-half) var(--grid-gutter-medium);
 		}
 
 		@media (--viewport-full) {
 			width: calc(50% - var(--grid-gutter));
-			margin: 0 var(--grid-gutter-half);
+			margin: 0 var(--grid-gutter-half) var(--grid-gutter);
 		}
 	}
 }
@@ -65,16 +65,16 @@
 
 	& > * {
 		width: 100%;
-		margin: 0 var(--grid-gutter-small-half);
+		margin: 0 var(--grid-gutter-small-half) var(--grid-gutter-small);
 
 		@media (--viewport-medium) {
 			width: calc(50% - var(--grid-gutter-medium));
-			margin: 0 var(--grid-gutter-medium-half);
+			margin: 0 var(--grid-gutter-medium-half) var(--grid-gutter-medium);
 		}
 
 		@media (--viewport-full) {
 			width: calc(33.3333% - var(--grid-gutter));
-			margin: 0 var(--grid-gutter-half);
+			margin: 0 var(--grid-gutter-half) var(--grid-gutter);
 		}
 	}
 }
@@ -98,16 +98,16 @@
 
 	& > * {
 		width: 100%;
-		margin: 0 var(--grid-gutter-small-half);
+		margin: 0 var(--grid-gutter-small-half) var(--grid-gutter-small);
 
 		@media (--viewport-medium) {
 			width: calc(50% - var(--grid-gutter-medium));
-			margin: 0 var(--grid-gutter-medium-half);
+			margin: 0 var(--grid-gutter-medium-half) var(--grid-gutter-medium);
 		}
 
 		@media (--viewport-full) {
 			width: calc(25% - var(--grid-gutter));
-			margin: 0 var(--grid-gutter-half);
+			margin: 0 var(--grid-gutter-half) var(--grid-gutter);
 		}
 	}
 }
