updates  to take lead form out of gravity forms setup

--- a/wp-content/themes/core/components/blocks/lead_form/css/lead-form.pcss
+++ b/wp-content/themes/core/components/blocks/lead_form/css/lead-form.pcss
@@ -16,10 +16,9 @@
 	}
 
 	/* CASE: Lead Form: Background Dark */
-	&.b-lead-form--dark,
-	.b-lead-form__container.b-lead-form--dark {
+	&.t-theme--light,
+	.b-lead-form__container.t-theme--light {
 		background-color: var(--color-black);
-		color: var(--color-white);
 	}
 }
 
