--- a/wp-content/themes/core/integrations/gravity-forms/css/label.pcss
+++ b/wp-content/themes/core/integrations/gravity-forms/css/label.pcss
@@ -4,6 +4,11 @@
 
 .gfield_label {
 	@mixin form-label;
+
+	/* CASE: Theme Light */
+	.t-theme--light & {
+		color: var(--color-white);
+	}
 }
 
 /* -----------------------------------------------------------------------------
