--- a/wp-content/themes/core/assets/css/src/theme/forms/_mixins.pcss
+++ b/wp-content/themes/core/assets/css/src/theme/forms/_mixins.pcss
@@ -29,6 +29,11 @@
 	letter-spacing: normal;
 	text-transform: none;
 	font: normal 600 var(--form-font-size-secondary) / 1.4 var(--form-font-family);
+
+	/* CASE: Theme Light */
+	.t-theme--light & {
+		color: var(--color-white);
+	}
 }
 
 /* -----------------------------------------------------------------------------
