Address slider component issues

--- a/wp-content/themes/core/integrations/gravity-forms/css/controls/file.pcss
+++ b/wp-content/themes/core/integrations/gravity-forms/css/controls/file.pcss
@@ -1,6 +1,6 @@
 .ginput_preview,
 .gf-file .validation_message {
-	background-color: darken(var(--form-control-bgd-color), 0.1);
+	background-color: var(--form-control-bgd-color);
 	height: auto;
 	font-size: var(--form-font-size);
 	padding: var(--form-control-file-padding);
