--- a/wp-content/themes/core/integrations/swiper/css/_variables.pcss
+++ b/wp-content/themes/core/integrations/swiper/css/_variables.pcss
@@ -1,3 +1,7 @@
 :root {
-	--swiper-arrow-color: var(--color-white);
+	--swiper-theme-color: #007aff;
+	--swiper-navigation-size: 44px;
+	--swiper-navigation-color: var(--swiper-theme-color);
+	--swiper-pagination-color: var(--swiper-theme-color);
+	--swiper-preloader-color: var(--swiper-theme-color);
 }
