add pull right offset styles for variable image ratio gallery

--- a/wp-content/themes/core/components/blocks/gallery_slider/css/gallery_slider.pcss
+++ b/wp-content/themes/core/components/blocks/gallery_slider/css/gallery_slider.pcss
@@ -18,9 +18,31 @@
 
 /* -----------------------------------------------------------------------------
  *
- * Gallery Slide
+ * Gallery Slider
  *
  * ----------------------------------------------------------------------------- */
+
+.b-gallery-slider__slider {
+
+	.c-slider__arrows {
+		max-width: calc(var(--grid-width) + (100% - var(--grid-width)) / 2);
+	}
+
+	/* CASE: Image Ratio Variable */
+	.b-gallery-slider--variable & {
+		position: relative;
+		overflow-x: hidden;
+	}
+}
+
+.c-slider__main {
+
+	/* CASE: Image Ratio Variable */
+	.b-gallery-slider--variable & {
+		max-width: calc(var(--grid-width) + (100% - var(--grid-width)) / 2);
+		margin: 0 0 0 auto;
+	}
+}
 
 .c-slider__slide {
 
