--- a/wp-content/themes/core/components/blocks/gallery_slider/css/gallery_slider.pcss
+++ b/wp-content/themes/core/components/blocks/gallery_slider/css/gallery_slider.pcss
@@ -48,8 +48,13 @@
 
 	/* CASE: Image Ratio Fixed */
 	.b-gallery-slider--fixed & {
-		width: calc(10/12 * 100%);
-		max-width: var(--grid-10-col);
+		width: calc(8/12 * 100%);
+		max-width: var(--grid-8-col);
+
+		@media (--viewport-medium) {
+			width: calc(10/12 * 100%);
+			max-width: var(--grid-10-col);
+		}
 	}
 
 	/* CASE: Image Ratio Variable */
