removed the spacer text in the admin. Changed border slightly

--- a/wp-content/themes/core/components/blocks/spacer/block-editor.pcss
+++ b/wp-content/themes/core/components/blocks/spacer/block-editor.pcss
@@ -9,14 +9,7 @@
 
 .wp-block[data-type^="acf/spacer"] {
 	.b-spacer {
-		border: 1px dashed #c8c8c8;
-
-		&:before {
-			content: '[SPACER]';
-			display: flex;
-			justify-content: center;
-			align-items: center;
-			height: 100%;
-		}
+		border-top: 1px dashed #c8c8c8;
+		border-bottom: 1px dashed #c8c8c8;
 	}
 }
