--- a/wp-content/themes/core/components/header/subheader/css/subheader.pcss
+++ b/wp-content/themes/core/components/header/subheader/css/subheader.pcss
@@ -15,6 +15,7 @@
 	margin-bottom: var(--spacer-80);
 }
 
+/* CASE: Page with featured image */
 body:not(.page-page-with-no-featured-image) .c-subheader { 
 	min-height: 440px;
 	align-items: flex-end;
@@ -35,7 +36,7 @@ body:not(.page-page-with-no-featured-image) .c-subheader {
 }
 
 /* -----------------------------------------------------------------------------
- * Subheader: Image 
+ * Subheader: Image component
  * ----------------------------------------------------------------------------- */
 
 .c-subheader__media__image {
@@ -53,6 +54,3 @@ body:not(.page-page-with-no-featured-image) .c-subheader {
 	mix-blend-mode: normal;
 	opacity: 0.9;
 }
-
-/* -----------------------------------------------------------------------------
- ^^ Subheader: Image -- Should this go to the pcss file in the Image component?? */
